# McWrldMgr

./: .gitignore  README.md  pyproject.toml  run_gui.bat
.github/workflows/: attach-existing-release.yml  ci.yml  release-windows.yml
src/mcworldmgr/: app.py  cli.py  gui_main.py
src/mcworldmgr/commands/: backup_cmd.py  edit_entity.py  edit_player.py  edit_world.py  inspect_cmd.py  regions_cmd.py  worlds_cmd.py
src/mcworldmgr/gui/: app.py
src/mcworldmgr/safety/: __init__.py  backup.py  locks.py
src/mcworldmgr/services/: __init__.py  operations.py
src/mcworldmgr/world/: __init__.py  discovery.py  nbt_io.py  paths.py  versioning.py
tests/: test_discovery.py  test_regions.py  test_versioning.py
