[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mcworldmgr"
version = "0.1.0"
description = "Minecraft Java world manager CLI"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "nbtlib>=2.0.4",
]

[project.scripts]
mcworldmgr = "mcworldmgr.cli:main"
mcworldmgr-gui = "mcworldmgr.gui_main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
